--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 			<h3>by Kevin Kimble</h3><br>
 			<p>Kevin has just started his Geometry homework. His professor requested that the class find real life examples of the following:</p><br>
 			<p>A <mark class="purple">square</mark>, <mark class="green">rectangle</mark>, <mark class="cyan">pentagon</mark>, <mark class="red">triangle</mark> and a <mark class="orange">circle</yellow>.</p><br>
-			<p>Easy enough right? Wrong!  “Who is this so hard to do. It’s the last assignment and I”m struggling to get it done”</p><br>
-			<p>Kevin reached out to his friends and family and asked that everyone send over a photo go what they could find.</p><br>
-			<p>His Mom, always willing to help, was the first to reply. She sent over a pretty <mark class="green">Rectangle</mark> in the form of shoe box that she was hanging on to.</p><br>
+			<p>Easy enough right? Wrong!  “Why is this so hard to do. It’s the last assignment and I'm struggling to get it done”</p><br>
+			<p>Kevin reached out to his friends and family and asked that everyone sends over a photo of what they could find.</p><br>
+			<p>His mom, always willing to help, was the first to reply. She sent over a pretty <mark class="green">Rectangle</mark> in the form of shoe box that she was hanging on to.</p><br>
 			<p>“Thanks mom!” Kevin replied, eager to snap a photo to submit for his assignment.</p><br>
-			<p>His next lifeline came from his best friend Heather who sent over a <mark class="orange">Circle</mark>s in the form of a cereal bowl she’d used for breakfast.</p><br>
+			<p>His next lifeline came from his best friend Heather who sent over a <mark class="orange">Circles</mark> in the form of a cereal bowl she’d used for breakfast.</p><br>
 			<p>“Geez, do you think you could have washed the bowl out first?” Kevin whined.</p><br>
 			<p><a href="page2.html">C O N T I N U E</a></p><br>
 	  </div>
