--- a/page2.html
+++ b/page2.html
@@ -20,11 +20,11 @@
 			<p>Immediately following that, he received a text from his dad with a picture of an old football.</p><br>
 			<p>“Dad that is definitely not any of the shapes I was looking for!”</p><br>
 			<p>“Sorry wrong person. But here’s a photo of a yield sign which is a <mark class=red>triangle</mark> right?”</p><br>
-			<p>“Dad you’re a genius!” Kevin exclaimed. Just a few shapes to go and I’ll be able to submit he said to himself.</p><br>
+			<p>“Dad you’re a genius!” Kevin exclaimed. "Just a few shapes to go and I’ll be able to submit" he said to himself.</p><br>
 			<p>Pacing around his apartment, he noticed his Xbox console looked pretty darn close to a <mark class=purple>square</mark> and so he snapped a photo of it.</p><br>
-			<p>Still uncertain go the last shape, Kevin reached out to the class group chat hoping for some inspiration.</p><br>
+			<p>Still uncertain for the last shape, Kevin reached out to the class group chat hoping for some inspiration.</p><br>
 			<p>Turns out several people were struggling and so he didn’t feel as bad.</p><br>
-			<p>And just as he was about give up, one of his classmates reached out to say she had an extra <mark class=cyan>pentagon</mark> photo to share.</p><br>
+			<p>And just as he was about to give up, one of his classmates reached out to say she had an extra <mark class=cyan>pentagon</mark> photo to share.</p><br>
 			<p><a href="page3.html">C O N T I N U E</a></p><br>
 	  </div>
 
